some work pending

--- a/extra.ipynb
+++ b/extra.ipynb
@@ -96,7 +96,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "confusion_matrix_df = pd.DataFrame(confusion_matrix(actual,predictions),index = class_names, columns =class_names)\n",
+    "\n",
+    "FP = cnf_matrix.sum(axis=0) - np.diag(confusion_matrix_df) \n",
+    "FN = cnf_matrix.sum(axis=1) - np.diag(confusion_matrix_df)\n",
+    "TP = np.diag(confusion_matrix_df)\n",
+    "TN = confusion_matrix_df.sum() - (FP + FN + TP)\n",
+    "NPV = TN/(TN+FN)\n",
+    "FDR = FP/(TP+FP)\n",
+    "FNR = FP/(FP+TN)\n",
+    "Accuracy = (TP + TN) / (TP + FP + FN + TN)\n",
+    "Error_rate = (FP + FN) / (TP + FP + FN + TN)\n",
+    "Precision = TP / (TP + FP)\n",
+    "Recall = TP / (TP + FN )\n",
+    "F_measure = (2 * recall * precision) / (recall + precision)\n",
+    "Fall_out = FN/(TP+FN)\n",
+    "Specificity = TN/(TN+FP)\n",
+    "\n",
+    "measures = pd.DataFrame()\n",
+    "measures['class_name'] = class_names\n",
+    "measures['TP'] = TP\n",
+    "measures['FP'] = FP\n",
+    "measures['TN'] = TN\n",
+    "measures['FN'] = FN\n",
+    "measures['NPV'] = NPV\n",
+    "measures['FDR'] = FDR\n",
+    "measures['FNR'] = FNR\n",
+    "measures['Accuracy'] = Accuracy\n",
+    "measures['Error_rate'] = Error_rate\n",
+    "measures['Precision'] = Precision\n",
+    "measures['Recall'] = Recall\n",
+    "measures['F_measure'] = F_measure\n",
+    "measures['Fall_out'] = Fall_out\n",
+    "measures['Specificity'] = Specificity\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(15,15))\n",
+    "sns.heatmap(cnf_matrix, annot=True)\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.ylabel('Actal Values')\n",
+    "plt.xlabel('Predicted Values')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
