--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af9ae198",
    "metadata": {
     "id": "af9ae198"
    },
@@ -46,7 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a494a18",
    "metadata": {
     "id": "5a494a18"
    },
@@ -76,7 +74,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "05c672c1",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "658435ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +138,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9030843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8eb0fe3c",
    "metadata": {
     "id": "8eb0fe3c"
    },
@@ -164,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d79291a4",
    "metadata": {
     "id": "d79291a4",
     "outputId": "e35a7c47-4bbc-490e-e3a6-b35365bb80ec"
@@ -200,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "add8c701",
    "metadata": {
     "id": "add8c701"
    },
@@ -212,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac3a11b6",
    "metadata": {
     "id": "ac3a11b6",
     "outputId": "34bcdf90-1da0-4da5-ad11-d36f54024a70"
@@ -259,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d015843e",
    "metadata": {
     "id": "d015843e",
     "outputId": "bdc0d61a-5807-4295-e2f7-282d3a27c95d"
@@ -290,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cf7c9f6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0604a789",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +332,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "af37f22d",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +419,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "675dd527",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1038,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "410fdf1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1047,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b84fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1057,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d335ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1067,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e50ff077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1078,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf9e29b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1087,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f9a2bd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1098,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9efdb2a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1112,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f1c3cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1141,7 +1119,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2ed0f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd8c4cb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b6e3cab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4969f709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1164,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff29efd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1188,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ab5ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1204,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c769d546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1215,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d5f392f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1257,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e478a739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1270,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1315,7 +1284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
